service-wrapper + wording/pricing

--- a/hydromassage.html
+++ b/hydromassage.html
@@ -66,21 +66,18 @@
                         Floating
                         <div class='services-hover-id'></div>
                     </a>
-
                 </li>
                 <li class='services-menu-item selected'>
                     <a href='./hydromassage.html' class='services-menu-link'>
                         HydroMassage
                         <div class='services-hover-id'></div>
                     </a>
-
                 </li>
                 <li class='services-menu-item'>
                     <a href='./massage.html' class='services-menu-link'>
                         Body Massage
                         <div class='services-hover-id'></div>
                     </a>
-
                 </li>
             </ul>
         </div>
@@ -89,46 +86,48 @@
         <div class='services-content-container'>
             <div class='services-header hydromassage-header'>
             </div>
-            <div class='services-header-title'>What is HydroMassage?</div>
-            <div class='services-header-info'>
-                HydroMassage lounge gives you all the benefits of a massage without getting wet. HydroMassage is designed to use waves of
-                heated water to provide an innovative experience.
-            </div>
-            <div class='services-benefits-container'>
-                <table class='services-benefits-table'>
-                    <tbody>
-                        <tr>
-                            <td class='services-benefits'>
-                                <div class='services-benefits-header'>
-                                    HydroMassage Benefits
-                                </div>
-                                <div class='services-benefits-list-wrapper'>
-                                    <ul class='services-benefits-list'>
-                                        <li class='services-benefit-listitem'>Reduce levels of stress and anxiety</li>
-                                        <li class='services-benefit-listitem'>Temporary relief of minor aches and pains</li>
-                                        <li class='services-benefit-listitem'>Increases circulation</li>
-                                        <li class='services-benefit-listitem'>Relieves muscle soreness, stiffness, and tension</li>
-                                        <li class='services-benefit-listitem'>Adjustable to your needs or preferences</li>
-                                        <li class='services-benefit-listitem'>Adjust your own intensity, speed, and temperature</li>
-                                        <li class='services-benefit-listitem'>Comfortable, convenient, and affordable</li>
-                                    </ul>
-                                </div>
-                            </td>
-                            <td class='services-benefits hydro-chair-img'>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class='hydro-cost-container'>
-                <div class='hydro-cost-tagline'>
-                    Try HydroMassage Today
+            <div class='services-wrapper'>
+                <div class='services-header-title'>What is HydroMassage?</div>
+                <div class='services-header-info'>
+                    HydroMassage lounge gives you all the benefits of a massage without getting wet. HydroMassage is designed to use waves of
+                    heated water to provide an innovative experience.
                 </div>
-                <div class='hydro-cost-wrapper'>
-                    <div class='hydro-cost'>Price</div>
-                    <div class='hydro-cost'>15 Minute Sessions | $20</div>
-                    <div class='hydro-cost-btn-wrapper'>
-                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                <div class='services-benefits-container'>
+                    <table class='services-benefits-table'>
+                        <tbody>
+                            <tr>
+                                <td class='services-benefits'>
+                                    <div class='services-benefits-header'>
+                                        HydroMassage Benefits
+                                    </div>
+                                    <div class='services-benefits-list-wrapper'>
+                                        <ul class='services-benefits-list'>
+                                            <li class='services-benefit-listitem'>Reduce levels of stress and anxiety</li>
+                                            <li class='services-benefit-listitem'>Temporary relief of minor aches and pains</li>
+                                            <li class='services-benefit-listitem'>Increases circulation</li>
+                                            <li class='services-benefit-listitem'>Relieves muscle soreness, stiffness, and tension</li>
+                                            <li class='services-benefit-listitem'>Adjustable to your needs or preferences</li>
+                                            <li class='services-benefit-listitem'>Adjust your own intensity, speed, and temperature</li>
+                                            <li class='services-benefit-listitem'>Comfortable, convenient, and affordable</li>
+                                        </ul>
+                                    </div>
+                                </td>
+                                <td class='services-benefits hydro-chair-img'>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class='hydro-cost-container'>
+                    <div class='hydro-cost-tagline'>
+                        Try HydroMassage Today
+                    </div>
+                    <div class='hydro-cost-wrapper'>
+                        <div class='hydro-cost'>Price</div>
+                        <div class='hydro-cost'>15 Minute Sessions | $20</div>
+                        <div class='hydro-cost-btn-wrapper'>
+                            <a class='btn btn-book' href='./book.html'>Book Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
