--- a/packages.html
+++ b/packages.html
@@ -85,76 +85,78 @@
                 </li>
             </ul>
         </div>
-        <div class='package-container section-packages clear'>
-            <div class='package-wrapper'>
-                <div class='package-padder'>
-                    <div class='package-title title-1'>
-                        <div class='title-fader'></div>
-                        <div class='title-text'>Float &amp; HydroMassage</div>
-                    </div>
-                    <div class='package-content'>
-                        <div class='package-cost-wrapper'>
-                            $78
+        <div class='package-container services-content-container clear'>
+            <div class='services-wrapper'>
+                <div class='package-wrapper'>
+                    <div class='package-padder'>
+                        <div class='package-title title-1'>
+                            <div class='title-fader'></div>
+                            <div class='title-text'>Float &amp; HydroMassage</div>
                         </div>
-                        <div class='package-divider'>
-                            <img src='./images/package_divider.png'>
-                        </div>
-                        <ul class='package-list'>
-                            <li class='package-listitem'>
-                                60 Minute Float
-                            </li>
-                            <li class='package-listitem'>
-                                15 Minute HydroMassage
-                            </li>
-                            <li class='package-listitem'>
-                                Includes preparation and shower time
-                            </li>
-                            <li class='package-listitem'>
-                                A full hour will be spent in float pad
-                            </li>
-                            <li class='package-listitem'>
-                                Enjoy HydroMassage before or after your float
-                            </li>
-                        </ul>
+                        <div class='package-content'>
+                            <div class='package-cost-wrapper'>
+                                $78
+                            </div>
+                            <div class='package-divider'>
+                                <img src='./images/package_divider.png'>
+                            </div>
+                            <ul class='package-list'>
+                                <li class='package-listitem'>
+                                    60 Minute Float
+                                </li>
+                                <li class='package-listitem'>
+                                    15 Minute HydroMassage
+                                </li>
+                                <li class='package-listitem'>
+                                    Includes preparation and shower time
+                                </li>
+                                <li class='package-listitem'>
+                                    A full hour will be spent in float pad
+                                </li>
+                                <li class='package-listitem'>
+                                    Enjoy HydroMassage before or after your float
+                                </li>
+                            </ul>
 
-                        <div class='package-book'>
-                            <a class='btn btn-book' href='./book.html'>Book Now</a>
+                            <div class='package-book'>
+                                <a class='btn btn-book' href='./book.html'>Book Now</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class='package-wrapper'>
-                <div class='package-padder'>
-                    <div class='package-title title-2'>
-                        <div class='title-fader'></div>
-                        <div class='title-text'>Float &amp; Body Massage</div>
-                    </div>
-                    <div class='package-content'>
-                        <div class='package-cost-wrapper'>
-                            $108
+                <div class='package-wrapper'>
+                    <div class='package-padder'>
+                        <div class='package-title title-2'>
+                            <div class='title-fader'></div>
+                            <div class='title-text'>Float &amp; Body Massage</div>
                         </div>
-                        <div class='package-divider'>
-                            <img src='./images/package_divider.png'>
-                        </div>
-                        <ul class='package-list'>
-                            <li class='package-listitem'>
-                                60 Minute Float
-                            </li>
-                            <li class='package-listitem'>
-                                30 Minute Body Massage
-                            </li>
-                            <li class='package-listitem'>
-                                Includes preparation and shower time
-                            </li>
-                            <li class='package-listitem'>
-                                A full hour will be spent in float pad
-                            </li>
-                            <li class='package-listitem'>
-                                Receive a body massage provided by our certified therapists
-                            </li>
-                        </ul>
-                        <div class='package-book'>
-                            <a class='btn btn-book' href='./book.html'>Book Now</a>
+                        <div class='package-content'>
+                            <div class='package-cost-wrapper'>
+                                $108
+                            </div>
+                            <div class='package-divider'>
+                                <img src='./images/package_divider.png'>
+                            </div>
+                            <ul class='package-list'>
+                                <li class='package-listitem'>
+                                    60 Minute Float
+                                </li>
+                                <li class='package-listitem'>
+                                    30 Minute Body Massage
+                                </li>
+                                <li class='package-listitem'>
+                                    Includes preparation and shower time
+                                </li>
+                                <li class='package-listitem'>
+                                    A full hour will be spent in float pad
+                                </li>
+                                <li class='package-listitem'>
+                                    Receive a body massage provided by our certified therapists
+                                </li>
+                            </ul>
+                            <div class='package-book'>
+                                <a class='btn btn-book' href='./book.html'>Book Now</a>
+                            </div>
                         </div>
                     </div>
                 </div>
