--- a/index.html
+++ b/index.html
@@ -75,17 +75,58 @@
         </div>
         <div class='join-wrapper'>
             <div class='join-padder'>
-                <label class='join-input-label'>Name</label>
+                <!-- Begin MailChimp Signup Form -->
+
+                <div id="mc_embed_signup">
+                    <form action="https://floatspa19.us18.list-manage.com/subscribe/post?u=524d59ff03094dc206c8bc8a6&amp;id=278bdc9a6c" method="post"
+                        id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+
+                            <div class="mc-field-group">
+                                <label class='join-input-label' for="mce-FNAME">First Name </label>
+                                <input placeholder='Enter your first name' type="text" value="" name="FNAME" class="join-input join-name" id="mce-FNAME">
+                            </div>
+                            <div class="mc-field-group">
+                                <label class='join-input-label' for="mce-LNAME">Last Name </label>
+                                <input placeholder='Enter your last name' type="text" value="" name="LNAME" class="join-input join-name" id="mce-LNAME">
+                            </div>
+                            <div class="mc-field-group">
+                                <label class='join-input-label' for="mce-EMAIL">Email Address </label>
+                                <input placeholder='Enter your E-Mail' type="email" value="" name="EMAIL" class="required email join-input join-email" id="mce-EMAIL">
+                            </div>
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                <input type="text" name="b_524d59ff03094dc206c8bc8a6_278bdc9a6c" tabindex="-1" value="">
+                            </div>
+                            <div class='join-btn-container clear'>
+                                <div class='join-btn-info'>We will never spam you</div>
+
+                                <div class="clear join-btn-wrapper">
+                                    <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-join">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                <script type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                <!--End mc_embed_signup-->
+                <!--   <label class='join-input-label'>Name</label>
                 <input type='text' class='join-input join-name' placeholder='Enter your name' />
                 <label class='join-input-label'>E-mail</label>
                 <input type='text' class='join-input join-email' placeholder='Enter you E-mail' />
                 <div class='join-btn-container clear'>
                     <div class='join-btn-info'>We will never spam you</div>
                     <div class='join-btn-wrapper'>
-                        <button class='btn btn-join'>Submit</button>
+                        <button id='btn-join' class='btn btn-join'>Submit</button>
                     </div>
-                </div>
+                </div>-->
             </div>
+
         </div>
     </div>
 
