--- a/book.html
+++ b/book.html
@@ -10,6 +10,12 @@
 
     <link rel='stylesheet' href='./css/master.min.css' />
 
+    <style>
+        html,
+        body {
+            overflow: hidden;
+        }
+    </style>
 </head>
 
 <body>
