react components && styles

--- a/floating.html
+++ b/floating.html
@@ -114,82 +114,8 @@
                     </div>
                 </div>
                 <!-- benefits -->
-                <div class='services-benefits-container'>
-                    <table class='services-benefits-table'>
-                        <tbody>
-                            <tr>
-                                <td class='services-benefits'>
-                                    <div class='services-benefits-header'>
-                                        Floating Benefits
-                                    </div>
-                                    <div class='services-benefits-list-wrapper'>
-                                        <div class='services-benefits-list content'>
-                                            Floating has a positive effect on the body and mind, remaining for days or even weeks after. Floating relaxes the brain allowing
-                                            an increasing connection between the two brain hemispheres. This allows the brain
-                                            to feel balanced spiritually, mentally, and physically. The float will also have
-                                            a positive effect on memory, allowing one to recall information and activity.
+                <div class='services-benefits-container' id='services-benefits-container'>
 
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class='services-benefits float-benefit-img-1'>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class='services-benefits float-benefit-img-2'>
-
-                                </td>
-                                <td class='services-benefits'>
-                                    <div class='services-benefits-header'>
-                                        Epsom Salt Benefits
-                                    </div>
-                                    <div class='services-benefits-list-wrapper'>
-                                        <div class='services-benefits-list content'>
-                                            The Epsom Salts help to balance calcium levels in the body, reduce stress, balance hormones, normalize blood pressure, reduce
-                                            risks of cancer and much more. The Magnesium salts ease stress, improve sleep
-                                            and concentration. It allows the muscles and nerves to function properly. The
-                                            sulfate salts can help the body flush toxins and improve absorption
-                                            of nutrients. It also helps form joint proteins and brain tissue to help prevent
-                                            or ease migraines.
-
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class='services-benefits'>
-                                    <div class='services-benefits-header'>
-                                        Try Floating Today
-                                    </div>
-                                    <div class='services-benefits-list-wrapper'>
-                                        <div class='services-benefits-list content clear'>
-                                            <div class='services-cost-wrapper'>
-                                                <div class='services-cost-text'>Price</div>
-                                                <div class='services-cost-text'>
-                                                    $68 / 90 Minutes
-                                                </div>
-                                            </div>
-                                            <div class='services-cost-wrapper'>
-                                                <div class='services-cost-text'>Includes</div>
-                                                <ul class='serviecs-cost-list'>
-                                                    <li class='services-cost-listitem'>Includes preparation time and shower time</li>
-                                                    <li class='services-cost-listitem'>A full hour will be spent in float pod</li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class='services-benefits float-benefit-img-3'>
-                                    <div class='book-benefit-text'>
-                                        Turn off outside inputs, relax and float.
-                                    </div>
-                                    <div class='book-benefit-btn-wrapper'>
-                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
                 </div>
             </div>
         </div>
@@ -203,6 +129,7 @@
     </div>
 
     <script src='./js/master.min.js'></script>
+    <script async defer src='./js/floatingservices.min.js'></script>
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
