--- a/massage.html
+++ b/massage.html
@@ -92,7 +92,7 @@
             <!-- Massages -->
             <div class='services-wrapper'>
 
-                <div class='services-benefits-container'>
+                <div class='services-benefits-container' id='services-benefits-container'>
                     <table class='services-benefits-table'>
                         <tbody>
                             <!-- signature -->
@@ -363,6 +363,7 @@
     </div>
 
     <script src='./js/master.min.js'></script>
+    <script async defer src='./js/massageservices.min.js'></script>
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
