--- a/packages.html
+++ b/packages.html
@@ -28,7 +28,7 @@
                     <span></span>
                 </div>
             </div>
-            <div class="menu-container">
+            <div class="menu-container" id='menu-container'>
                 <ul id='menu-list' class="menu-list clear">
                     <li class="menu-item">
                         <a href='http://www.floatspa19.com' class='menu-link'>About</a>
@@ -86,7 +86,7 @@
             </ul>
         </div>
         <div class='package-container services-content-container clear'>
-            <div class='services-wrapper'>
+            <div class='services-wrapper clear'>
                 <div class='package-wrapper'>
                     <div class='package-padder'>
                         <div class='package-title title-1'>
